--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,13 @@
 
 html {
   font-family: "Inter", sans-serif;
-  background-color: #ffd500;
+  background-color: #dcebfe;
   overflow-x: clip;
+}
+
+.square {
+  background: repeating-linear-gradient(90deg, rgba(0,0,0,0.3) 0 1px, #fff 1px 40px),
+    repeating-linear-gradient(180deg, rgba(0,0,0,0.3) 0 1px, #fff 1px 40px);
+    background-blend-mode: multiply;
+    margin-bottom: 200px;
 }
